@@ -43,6 +43,10 @@ xx/xx/2006 - x.xx.x - .
 	  node.  (Anton)
 	- ntfsinfo: Print in both decimal and hexadecimal where it makes sense
 	  and is useful.  (Anton)
+	- ntfsclone: Define endianness safe image format.  (Anton)
+	- ntfsclone: Redefine image format version number to be the image
+	  format version and not the NTFS version of the imaged volume which is
+	  totally useless.  (Anton)
 
 21/06/2006 - 1.13.1 - Various fixes.
 
